2008-01-03  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.15

2008-01-02  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message.c (message_write_to_stream): Reworked the
	logic to be easier to understand what is going on.

	* gmime/gmime-multipart.c (multipart_write_to_stream): In the case
	where multipart->boundary is NULL /and/ we have a raw
	header (suggesting a parsed message), do not set a boundary as it
	will break the output because it will clobber the saved raw header
	and GMimeMessage's write_to_stream() method will have skipped
	writing its own headers if its toplevel part (us) have a raw
	header set. In this case, also skip writing the end boundary.

2008-01-01  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.14

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Fixed a
	Free Memory Read access (FMR) by not freeing 'name' before using
	it's value. Also reworked to take advantage of uname(2) or
	getdomainname() to get the domain name if available to avoid
	having to do a DNS lookup.

2007-01-01  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.13

2008-01-01  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #506701

	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): Don't
	reset the word-type variable as it needs to be preserved when
	breaking long words.
	(rfc2047_encode): Switch on word->encoding - if 0, rfc2047 encode
	as us-ascii.

2007-12-27  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (decode_8bit): Now takes a default_charset
	argument which we use in place of the locale charet if
	non-NULL. We also now always include this charset in our list of
	charsets to check for a best-match (obviously this charset is
	unlikely to be an exact fit if this function is getting called, so
	we place it at the end of the list).