@@ -136,14 +136,6 @@ if test "x$enable_profiling" = "xyes"; then
   CFLAGS="-O0 -g -pg"
 fi
 
-AC_ARG_ENABLE(rfc2047-workarounds,
-              AC_HELP_STRING([--enable-rfc2047-workarounds],
-	      [enable workarounds for broken rfc2047 encodings [[default=no]]]),,
-	      enable_rfc2047_workarounds=no)
-if test "x$enable_rfc2047_workarounds" = "xyes"; then
-  AC_DEFINE(ENABLE_RFC2047_WORKAROUNDS, 1, [Define if GMime should enable workarounds for broken rfc2047 encodings.])
-fi
-
 dnl Enable warning spewage on the console
 AC_ARG_ENABLE(warnings,
               AC_HELP_STRING([--enable-warnings],
@@ -238,6 +230,15 @@ AC_TRY_LINK([
 	AC_MSG_RESULT(no)
 )
 
+dnl Check if we should work around broken rfc2047 encodings
+AC_ARG_ENABLE(rfc2047-workarounds,
+              AC_HELP_STRING([--enable-rfc2047-workarounds],
+	      [enable workarounds for broken rfc2047 encodings [[default=no]]]),,
+	      enable_rfc2047_workarounds=no)
+if test "x$enable_rfc2047_workarounds" = "xyes"; then
+  AC_DEFINE(ENABLE_RFC2047_WORKAROUNDS, 1, [Define if GMime should enable workarounds for broken rfc2047 encodings.])
+fi
+
 dnl Check for MAXHOSTNAMELEN
 AC_MSG_CHECKING(for MAXHOSTNAMELEN)
 AC_TRY_COMPILE([
@@ -267,7 +268,6 @@ AC_TRY_COMPILE([
 ,
 	AC_MSG_RESULT(no)
 )
-
 
 dnl Timezone checks
 AC_CACHE_CHECK(for tm_gmtoff in struct tm, ac_cv_struct_tm_gmtoff,
