@@ -1,3 +1,8 @@
+2008-01-14  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-charset.c (g_mime_set_user_charsets): Deep copy the
+	string array. Fixes bug #509434.
+
 2008-01-03  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
